--- a/render.yaml
+++ b/render.yaml
@@ -1,9 +1,8 @@
 services:
   - type: web
-    name: corrector-texto
+    name: mi-app
     env: python
-    buildCommand: ""
-    startCommand: "gunicorn app:app"
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10
+    buildCommand: |
+      pip install -r requirements.txt
+      pip install -e autocorrect
+    startCommand: gunicorn app:app
